--- a/bank/html/bildegalleri.html
+++ b/bank/html/bildegalleri.html
@@ -20,7 +20,7 @@
 
                 <div>
                     <ul>
-                        <li> <a href="..index.html">Hjem</a></div>
+                        <li> <a href="../index.html">Hjem</a></div>
                 </li>
                 </ul>
                 <div>
