--- a/bank/index.html
+++ b/bank/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header>
+        <div class="money"></div>
         <h1> Tysvær Bank</h1>
     </header>
     <article id="main">
@@ -29,16 +30,21 @@
                             <a href="#">Kunder</a>
                             <ul>
                                 <li> <a href="html/kunder.html">Våre kunder</a></li>
-                                <li><a href="html/bildegalleri.html">Bilder</a>
                             </ul>
                             </li>
                     </ul>
                 </div>
                 <div>
                     <ul>
-                        <li> <a href="html/om-oss.html">Om oss</a></div>
-                </li>
-                </ul>
+                        <li> <a href="html/om-oss.html">Om oss</a>
+                            <ul>
+                                <li><a href="html/bildegalleri.html">Bilder</a>
+                            </ul>
+                            </li>
+                        </li>
+                    </ul>
+                </div>
+
                 <div>
                     <ul>
                         <li><a href="html/logg-inn.html">Logg inn</a>
