--- a/bank/html/kunder.html
+++ b/bank/html/kunder.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/menu.css">
+    <script src="../bank.js"></script>
     <title>Bank</title>
 </head>
 
@@ -29,16 +30,20 @@
                             <a href="#">Kunder</a>
                             <ul>
                                 <li> <a href="../html/kunder.html">Våre kunder</a></li>
-                                <li><a href="../html/bildegalleri.html">Bilder</a>
                             </ul>
-                            </li>
+                        </li>
                     </ul>
                 </div>
                 <div>
                     <ul>
-                        <li> <a href="../html/om-oss.html">Om oss</a></div>
-                </li>
-                </ul>
+                        <li> <a href="../html/om-oss.html">Om oss</a>
+                            <ul>
+                                <li><a href="../html/bildegalleri.html">Bilder</a>
+                            </ul>
+                            </li>
+                        </li>
+                    </ul>
+                </div>
                 <div>
                     <ul>
                         <li><a href="../html/logg-inn.html">Logg inn</a>
@@ -52,10 +57,24 @@
 
                 </div>
             </div>
-            
+
+            <div id="kunde">
+                    <h4>Kunde</h4>
+                </div>
+                <div id="konto">
+                    <h4> Konto</h4>
+                </div>
+                <div id="transaksjoner">
+                    <h4>Transaksjoner</h4>
+                </div>
 
     </article>
     <footer></footer>
+
+
+<script>
+    setup();
+</script>
 </body>
 
 </html>
