--- a/bank/index.html
+++ b/bank/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/grid.css">
     <title>Bank</title>
 </head>
 
@@ -31,7 +32,7 @@
                             <ul>
                                 <li> <a href="html/kunder.html">Våre kunder</a></li>
                             </ul>
-                            </li>
+                        </li>
                     </ul>
                 </div>
                 <div>
@@ -58,7 +59,13 @@
 
                 </div>
             </div>
-            <h1>HJEM</h1>
+
+            <div class="grid">
+                    <div class="item1"><h2>velkommen</h2> <p>Me i Tysvær Bank tar vare <br> på pengene dine. Sett inn 1000kr <br> og få 500 000kr å spille for.</p></div>
+                    <div class="item2"></div>
+                    <div class="item3"><p>Har du lyst på fotballdrakt til laget ditt?  sett inn 1000kr i dag.</p></div>  
+           
+            </div>
 
     </article>
     <footer></footer>
