--- a/bank/html/bli-kunde.html
+++ b/bank/html/bli-kunde.html
@@ -29,16 +29,20 @@
                             <a href="#">Kunder</a>
                             <ul>
                                 <li> <a href="../html/kunder.html">Våre kunder</a></li>
-                                <li><a href="../html/bildegalleri.html">Bilder</a>
                             </ul>
-                            </li>
+                        </li>
                     </ul>
                 </div>
                 <div>
                     <ul>
-                        <li> <a href="../html/om-oss.html">Om oss</a></div>
-                </li>
-                </ul>
+                        <li> <a href="../html/om-oss.html">Om oss</a>
+                            <ul>
+                                <li><a href="../html/bildegalleri.html">Bilder</a>
+                            </ul>
+                            </li>
+                        </li>
+                    </ul>
+                </div>
                 <div>
                     <ul>
                         <li><a href="../html/logg-inn.html">Logg inn</a>
@@ -52,7 +56,7 @@
 
                 </div>
             </div>
-            
+
 
     </article>
     <footer></footer>
