--- a/bank/html/data.html
+++ b/bank/html/data.html
@@ -63,25 +63,28 @@
 
                 </div>
             </div>
-            <div id="sjef">
-                <div class="sjef">Administrerende direktør
-                    <h1>Roger</h1>
-                </div>
-            </div>
-            <div id="bilder">
-                <div class="bilde"> Personlig assistent
-                    <h1>Linda</h1>
-                </div>
-                <div class="bilde"> Fabrikksjef
-                    <h1>Maren</h1>
-                </div>
-                <div class="bilde"> Bartender
-                    <h1>Trude</h1>
-                </div>
-                <div class="bilde"> Kantinemedarbeider
-                    <h1>Veronika</h1>
-                </div>
-            </div>
+        </div>
+        <div id="artikkel">
+            <h1>11 tips til deg som ikke vil bli hacket </h1>
+            <hr>
+            <ol>
+                <li>Stopp, tenk og klikk (i den rekkefølgen). Dersom noe virker for godt til å være sant, så er det nok heller
+                    ikke sant.</li>
+                <li>Vern om «nøkler til pengene dine» og ID'en din.</li>
+                <li>Ikke skriv ned PIN-koden til bankkortet.</li>
+                <li>Skjerm PIN-koden ved inntasting og bruk regionsperren for dine kort.</li>
+                <li>Vern om din digitale identitet, oppgi den kun når du er sikker på at det er riktig.</li>
+                <li>Installer brannmur og skru den på, installer antivirus, hold datamaskinen oppdatert.</li>
+                <li>Velg et godt passord – for eksempel med æ, ø, å og spesialtegn, bland små og store bokstaver.</li>
+                <li>Ta jevnlig backup – og lagre en backup med en viss avstand til selve PC-en eller mobilen. For eksempel på
+                    en skytjeneste.</li>
+                <li>Vær naturlig skeptisk.</li>
+                <li>Epost, SMS og nettmeldinger er enkle å forfalske. Vær kritisk, ikke la deg lure.</li>
+                <li>Vær rask hvis du blir lurt. Hvis du har oppgitt betalingsinformasjon eller bank-hemmeligheter til andre ved
+                    en feil så ta kontakt med din bank umiddelbart.</li>
+            </ol>
+
+        </div>
 
     </article>
     <footer id="footer">
