--- a/bank/html/kunder.html
+++ b/bank/html/kunder.html
@@ -7,13 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/menu.css">
+    <link rel="stylesheet" href="../css/kunder.css">
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
     <script src="../bank.js"></script>
+    <link rel="icon" href="../bilder/favicon.ico">
     <title>Bank</title>
 </head>
 
 <body>
     <header>
-        <h1> Tysvær Bank</h1>
+        <h1> Tysvær Sparebank</h1>
     </header>
     <article id="main">
         <div id="menu">
@@ -21,34 +24,39 @@
 
                 <div>
                     <ul>
-                        <li> <a href="../index.html">Hjem</a></div>
+                        <li> <a href="../index.html">Hjem <img src="../bilder/005-presentation.svg" width="20px" height="20px"></a></div>
                 </li>
                 </ul>
                 <div>
                     <ul>
                         <li>
-                            <a href="#">Kunder</a>
+                            <a href="#">Kunder <img src="../bilder/001-money.svg" width="20px" height="20px"></a>
                             <ul>
-                                <li> <a href="../html/kunder.html">Våre kunder</a></li>
+                                <li> <a href="../html/kunder.html">Våre kunder <img src="../bilder/001-money.svg" width="20px" height="20px"></a></li>
                             </ul>
                         </li>
                     </ul>
                 </div>
                 <div>
                     <ul>
-                        <li> <a href="../html/om-oss.html">Om oss</a>
+                        <li> <a href="../html/om-oss.html">Om oss <img src="../bilder/002-pie-chart-1.svg" width="20px" height="20px"></a>
                             <ul>
-                                <li><a href="../html/bildegalleri.html">Bilder</a>
+                                <li><a href="../html/bildegalleri.html">Bilder <img src="../bilder/005-folder.svg" width="20px" height="20px"></a>
+
+                                </li>
+
+                                <li><a href="../html/data.html">Tysvær Datautstyr <img src="../bilder/001-charts.svg" width="20px" height="20px"></a>
                             </ul>
                             </li>
                         </li>
                     </ul>
                 </div>
+
                 <div>
                     <ul>
-                        <li><a href="../html/logg-inn.html">Logg inn</a>
+                        <li><a href="../html/bli-kunde.html">Bli kunde <img src="../bilder/004-puzzle.svg" width="20px" height="20px"></a>
                             <ul>
-                                <li><a href="../html/bli-kunde.html">Bli kunde</a>
+                                <li><a href="../html/kundebilder.html">Morgendagens kunder <img src="../bilder/002-handshake.svg" width="20px" height="20px"></a>
                             </ul>
                             </li>
                     </ul>
@@ -58,23 +66,37 @@
                 </div>
             </div>
 
-            <div id="kunde">
-                    <h4>Kunde</h4>
-                </div>
-                <div id="konto">
-                    <h4> Konto</h4>
-                </div>
-                <div id="transaksjoner">
-                    <h4>Transaksjoner</h4>
-                </div>
 
+            <div id="liste" class="kunde">
+                <div>
+                    Velg kunde
+                    <span id="kundevelger"></span>
+                </div>
+            </div>
+
+            <div id="konto" class="konto">
+
+            </div>
     </article>
-    <footer></footer>
+    <footer id="footer">
+        <table>
+            <tr>
+                <th>Mobilnummer</th>
+                <th>Adresse</th>
+                <th>Epost</th>
+            </tr>
+            <tr>
+                <td> 412 22 132</td>
+                <td> Aksdal sentrum</td>
+                <td>tysvær@bank.no</td>
+            </tr>
+        </table>
+    </footer>
 
 
-<script>
-    setup();
-</script>
+    <script>
+        setup();
+    </script>
 </body>
 
 </html>
