--- a/bank/index.html
+++ b/bank/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/grid.css">
+    <link rel="icon" href="bilder/favicon.ico">
     <title>Bank</title>
 </head>
 
 <body>
     <header>
         <div class="money"></div>
-        <h1> Tysvær Bank</h1>
+        <h1> Tysvær Sparebank</h1>
+
     </header>
     <article id="main">
         <div id="menu">
@@ -22,24 +24,28 @@
 
                 <div>
                     <ul>
-                        <li> <a href="index.html">Hjem</a></div>
+                        <li> <a href="index.html">Hjem <img src="bilder/005-presentation.svg" width="20px" height="20px"></a></div>
                 </li>
                 </ul>
                 <div>
                     <ul>
                         <li>
-                            <a href="#">Kunder</a>
+                            <a href="#">Kunder <img src="bilder/001-money.svg" width="20px" height="20px"></a>
                             <ul>
-                                <li> <a href="html/kunder.html">Våre kunder</a></li>
+                                <li> <a href="html/kunder.html">Våre kunder <img src="bilder/001-money.svg" width="20px" height="20px"></a></li>
                             </ul>
                         </li>
                     </ul>
                 </div>
                 <div>
                     <ul>
-                        <li> <a href="html/om-oss.html">Om oss</a>
+                        <li> <a href="html/om-oss.html">Om oss <img src="bilder/002-pie-chart-1.svg" width="20px" height="20px"></a>
                             <ul>
-                                <li><a href="html/bildegalleri.html">Bilder</a>
+                                <li><a href="html/bildegalleri.html">Bilder <img src="bilder/005-folder.svg" width="20px" height="20px"></a>
+
+                                </li>
+
+                                <li><a href="html/data.html">Tysvær Datautstyr <img src="bilder/001-charts.svg" width="20px" height="20px"></a>
                             </ul>
                             </li>
                         </li>
@@ -48,9 +54,9 @@
 
                 <div>
                     <ul>
-                        <li><a href="html/logg-inn.html">Logg inn</a>
+                        <li><a href="html/bli-kunde.html">Bli kunde <img src="bilder/004-puzzle.svg" width="20px" height="20px"></a>
                             <ul>
-                                <li><a href="html/bli-kunde.html">Bli kunde</a>
+                                <li><a href="html/kundebilder.html">Morgendagens kunder <img src="bilder/002-handshake.svg" width="20px" height="20px"></a>
                             </ul>
                             </li>
                     </ul>
@@ -60,15 +66,43 @@
                 </div>
             </div>
 
+
             <div class="grid">
-                    <div class="item1"><h2>velkommen</h2> <p>Me i Tysvær Bank tar vare <br> på pengene dine. Sett inn 1000kr <br> og få 500 000kr å spille for.</p></div>
-                    <div class="item2"></div>
-                    <div class="item3"><p>Har du lyst på fotballdrakt til laget ditt?  sett inn 1000kr i dag.</p></div>  
-           
+                <div class="item1">
+                    <h2>velkommen</h2>
+                    <p>
+                        <bold>Boliglån fra 7,99 % rente </bold><br> Vi har superlave lånerenter. <br> Send inn en uforpliktende
+                        søknad nå, så tar vi kontakt.
+
+                    </p>
+                </div>
+                <div class="item2"> </div>
+                <div class="item3">
+
+                    <h6> FINANSIERING INNTIL KR 500.000 </h6>
+                    <p> Forbrukslån er et lån uten sikkerhet hvor du bestemmer lånebeløpet helt selv, inntil kr 500.000. Det
+                        stilles ingen spørsmål om hva pengene skal brukes til, og pengene vil bli utbetalt direkte til din
+                        konto. Se hvor mye du kan låne idag ved å bruke lånekalkulatoren!
+                        <p>
+                </div>
+
             </div>
 
     </article>
-    <footer></footer>
+    <footer id="footer">
+        <table>
+            <tr>
+                <th>Mobilnummer</th>
+                <th>Adresse</th>
+                <th>Epost</th>
+            </tr>
+            <tr>
+                <td> 412 22 132</td>
+                <td> Aksdal sentrum</td>
+                <td>tysvær@bank.no</td>
+            </tr>
+        </table>
+    </footer>
 </body>
 
 </html>
