--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
         </li>
     </div>
 
-    <div class="innhold">
+    <div id="innhold">
+
         <ul>
+            <li> <button class=button type="button" onclick="document.getElementById('innhold').style.fontSize='4em'">Større skrift.</button>                <br>
+                <button class=button type="button" onclick="document.getElementById('innhold').style.fontSize='1em'">Mindre skrift</button>
+            </li>
             <li>
                 <a href="posten/hjem.html">Posten</a>
             </li>
@@ -58,13 +62,15 @@
                 <a href="julekort/julekort.html">Julekort</a>
             </li>
             <li>
-                    <a href="grid/grid.html">Grid</a>
+                <a href="grid/grid.html">Grid</a>
             </li>
 
-            <li> 
+            <li>
                 <a href="risk/risk.html">Risk</a>
             </li>
             <li><a href="nettbutikk/index.html">Nettbutikk</a></li>
+
+
         </ul>
 
     </div>
