--- a/bank/html/kundebilder.html
+++ b/bank/html/kundebilder.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/menu.css">
-    <link rel="stylesheet" href="../css/bildegalleri.css">
+    <link rel="stylesheet" href="../css/kundebilder.css">
     <link rel="icon" href="../bilder/favicon.ico">
     <title>Bank</title>
 </head>
@@ -63,25 +63,27 @@
 
                 </div>
             </div>
-            <div id="sjef">
-                <div class="sjef">Administrerende direktør
-                    <h1>Roger</h1>
-                </div>
+            <div id="galleri">
+
+                <input type="radio" name="r" id="r1" checked="">
+                <input type="radio" name="r" id="r2">
+                <input type="radio" name="r" id="r3">
+                <input type="radio" name="r" id="r4">
+                <input type="radio" name="r" id="r5">
+
+                <div class="bilde" id="b1"></div>
+                <div class="bilde" id="b2"></div>
+                <div class="bilde" id="b3"></div>
+                <div class="bilde" id="b4"></div>
+                <div class="bilde" id="b5"></div>
+
+
+
+
             </div>
-            <div id="bilder">
-                <div class="bilde"> Personlig assistent
-                    <h1>Linda</h1>
-                </div>
-                <div class="bilde"> Fabrikksjef
-                    <h1>Maren</h1>
-                </div>
-                <div class="bilde"> Bartender
-                    <h1>Trude</h1>
-                </div>
-                <div class="bilde"> Kantinemedarbeider
-                    <h1>Veronika</h1>
-                </div>
-            </div>
+
+
+
 
     </article>
     <footer id="footer">
