super minor changes

--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                 <br><br><br>
 
         <ul>
-            <li> <button class=button type="button" onclick="document.getElementById('innhold').style.fontSize='4em'">Større skrift.</button>                <br>
-                <button class=button type="button" onclick="document.getElementById('innhold').style.fontSize='1em'">Mindre skrift</button>
-            </li>
             <li>
                 <a href="posten/hjem.html">Posten</a>
             </li>
@@ -75,6 +72,14 @@
 
 
         </ul>
+
+        <div id="skrift">
+                <ul>
+                         <button class=button type="button" onclick="document.getElementById('innhold').style.fontSize='4em'">Større skrift.</button>                
+                            <button class=button type="button" onclick="document.getElementById('innhold').style.fontSize='1em'">Mindre skrift</button>
+                    
+                </ul>
+        </div>
 
    
 
