--- a/bank/html/bli-kunde.html
+++ b/bank/html/bli-kunde.html
@@ -71,7 +71,7 @@
                 <form>
                     <div>
                         <div>kundenr</div>
-                        <div><input id="kundenr" type="number" placeholder="et tall mellom 1010-2000.."></div>
+                        <div><input id="kundenr" type="number" placeholder="1000<x<2000"></div>
                     </div>
                     <div>
                         <div>Fornavn</div>
