--- a/animasjon/animasjon.html
+++ b/animasjon/animasjon.html
@@ -16,6 +16,12 @@
         <div id="boks"></div>
     </div>
 
+    <div id="fugl"> 
+        <div><img src="../fugl1.png" ></div>
+        <div><img src="../fugl2.png" ></div>
+        <div><img src="../fugl3.png" ></div>
+    </div>
+
     <script>
         setup();
     </script>
