--- a/vg2/index.html
+++ b/vg2/index.html
@@ -34,12 +34,42 @@
 
         <ul>
             <li>
-                <a href="vg2/index.html">VG2</a>
+                <a href="posten/hjem.html">Posten</a>
             </li>
             <li>
-                <a href="vg3/index.html">VG3</a>
+                <a href="todo/index.html">Gjøremål</a>
             </li>
-            
+            <li>
+                <a href="datautstyr/datautstyr.html">Datautstyr</a>
+            </li>
+            <li>
+                <a href="sekskant.html">Sekskant</a>
+            </li>
+            <li>
+                <a href="land/land.html">Land</a>
+            </li>
+
+            <li>
+                <a href="land/dyr.html">vetrinær</a>
+            </li>
+            <li>
+                <a href="kundeskjema.html">Kundeskjema</a>
+            </li>
+            <li>
+                <a href="prove/prove.html">Webshop</a>
+            </li>
+            <li>
+                <a href="julekort/julekort.html">Julekort</a>
+            </li>
+            <li>
+                <a href="grid/grid.html">Grid</a>
+            </li>
+
+            <li>
+                <a href="risk/risk.html">Risk</a>
+            </li>
+            <li><a href="nettbutikk/index.html">Nettbutikk</a></li>
+
 
         </ul>
 
