--- a/vg3/array/array.html
+++ b/vg3/array/array.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="balls.css">
-    <script src="balls.js"></script>
-    <title>Balls</title>
+    <link rel="stylesheet" href="array.css">
+    <script src="array.js"></script>
+    <title>Array</title>
 </head>
 <body>
-
-    <div id="main">
-        <div id="board">
-            <button id="start">Spre kommunisme, spre glede</button>
-        </div>
-    </div>
+<h1>Array og string</h1>
+    <div id="main"></div>
+    
     <script>
         setup();
     </script>
