--- a/vg3/varer/varer.html
+++ b/vg3/varer/varer.html
@@ -23,21 +23,23 @@
                 </select>
             </label>
 
-            <label id="elektrodiv" class="elektroting" class="varer" for="elektro"> <div id="radio">radio <input type="radio"
-                        name="vare"></div>
-                <div id="tv">tv <input type="radio" name="vare"></div>
-                <div id="pc">pc <input type="radio" name="vare"></div></label>
+            <label id="elektrodiv" class="elektroting" class="varer" for="elektro"> 
+                <div id="radio"> radio <input class="vare" type="radio" name="vare" value="Radio" ></div>
+                <div id="tv">tv <input class="vare" type="radio" name="vare" value="TV" ></div>
+                <div id="pc">pc <input class="vare" type="radio" name="vare" value="PC" ></div>
+            </label>
 
-            <label id="klerdiv" class="klerting" class="varer" for="kler"> <div id="hatt">hatt <input type="radio" name="vare"></div>
-                <div id="sko">sko <input type="radio" name="vare"></div>
-                <div id="slips">slips <input type="radio" name="vare"></div></label>
+            <label id="klerdiv" class="klerting" class="varer" for="kler"> 
+                <div id="hatt">hatt <input class="vare" type="radio" name="vare" value="Hatt" ></div>
+                <div id="sko">sko <input class="vare" type="radio" name="vare" value="Sko" ></div>
+                <div id="slips">slips <input class="vare" type="radio" name="vare" value="Slips" ></div></label>
 
-            <label id="brusdiv" class="brusting" class="varer" for="brus"> <div id="cola">cola <input type="radio" name="vare"></div>
+            <label id="brusdiv" class="brusting" class="varer" for="brus"> <div id="cola">cola <input class="vare" type="radio" name="vare" value="Cola" ></div>
             </label>
 
 
             <label for="antall">Antall<input type="number" id="antall"></label>
-            <label for="lagre"><button type="button" id="lagre">Bestill</button></label>
+            <label for="lagre"><button type="button" id="bestill">Bestill</button></label>
         </form>
 
         <div id="melding"></div>
