--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
         <ul>
             <li>
-                <a href="vg2/index.html">VG2</a>
+                <a href="VG2/index.html">VG2</a>
             </li>
             <li>
-                <a href="vg3/index.html">VG3</a>
+                <a href="VG3/index.html">VG3</a>
             </li>
             
 
