--- a/vg3/varer/varer.html
+++ b/vg3/varer/varer.html
@@ -15,7 +15,7 @@
     <div id="registrer">
         <form id="reg">
             <label>Varer<select id="varer">
-                    <option value="" selected></option>
+                    <option value="" selected>Velg...</option>
                     <option value="elektro" id="elektro">Elektro</option>
                     <option value="kler" id="kler">Klær</option>
                     <option value="brus" id="brus">Brus</option>
