--- a/vg3/julekalender/julekalender.html
+++ b/vg3/julekalender/julekalender.html
@@ -35,6 +35,8 @@
         <div class="luke">23</div>
         <div class="luke">24</div>
     </div>
+    <audio id="happy" src=""></audio>
+    <audio id="sad" src=""></audio>
     <div id="visluke">
 
     </div>
