--- a/frosk/html/quiz.html
+++ b/frosk/html/quiz.html
@@ -20,7 +20,7 @@
 <button type="button" id="lagreAlder">Lagre</button> </div>
 
     <div id="spm">
-            <audio id="audio" autoplay src="../media/fortnite.mp3"></audio>
+            <audio id="audio" src="../media/fortnite.mp3"></audio>
         <form id="quiz">
 
             <ol>
