--- a/frosk/html/quiz.html
+++ b/frosk/html/quiz.html
@@ -66,17 +66,17 @@
                         <h3>Hva er dine plystreferdigheter?</h3>
 
                         <div>
-                            <input type="radio" name="question-3-answers" id="question-3-answers-A" value="A" />
+                            <input type="radio" name="question-3-answers" id="question-3-answers-A" value="1" />
                             <label for="question-3-answers-A">Helt greie</label>
                         </div>
 
                         <div>
-                            <input type="radio" name="question-3-answers" id="question-3-answers-B" value="B" />
+                            <input type="radio" name="question-3-answers" id="question-3-answers-B" value="0" />
                             <label for="question-3-answers-B">Har ikke plystret før</label>
                         </div>
 
                         <div>
-                            <input type="radio" name="question-3-answers" id="question-3-answers-C" value="C" />
+                            <input type="radio" name="question-3-answers" id="question-3-answers-C" value="0" />
                             <label for="question-3-answers-C"> Jeg bor på landet.</label>
                         </div>
 
@@ -87,12 +87,12 @@
                         <h3>Hvilke av disse sangene kan du plystre?</h3>
 
                         <div>
-                            <input type="radio" name="question-4-answers" id="question-4-answers-A" value="A" />
+                            <input type="radio" name="question-4-answers" id="question-4-answers-A" value="1" />
                             <label for="question-4-answers-A">Ja</label>
                         </div>
 
                         <div>
-                            <input type="radio" name="question-4-answers" id="question-4-answers-B" value="B" />
+                            <input type="radio" name="question-4-answers" id="question-4-answers-B" value="0" />
                             <label for="question-4-answers-B">Nei</label>
                         </div>
 
@@ -103,12 +103,12 @@
                         <h3>Er du født i feil kropp?</h3>
 
                         <div>
-                            <input type="radio" name="question-5-answers" id="question-5-answers-A" value="A" />
+                            <input type="radio" name="question-5-answers" id="question-5-answers-A" value="0" />
                             <label for="question-5-answers-A">Ja</label>
                         </div>
 
                         <div>
-                            <input type="radio" name="question-5-answers" id="question-5-answers-B" value="B" />
+                            <input type="radio" name="question-5-answers" id="question-5-answers-B" value="1" />
                             <label for="question-5-answers-B">Nei</label>
                         </div>
 
@@ -116,7 +116,7 @@
 
                     <br>
 
-                    <input type="button" value="Se svaret ditt!">
+                    <input type="button" value="Se svaret ditt!" id="sesvar">
                 </div>
 
 
