--- a/frosk/html/quiz.html
+++ b/frosk/html/quiz.html
@@ -1,144 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="../css/styleHome.css" />
+    <link rel="stylesheet" href="../css/tvangsekteskap.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/quiz.css">
     <script src="../js/frosk.js"></script>
-
-    <title>Byfrosker har mer draget</title>
+    <title> BYFROSKER </title>
 </head>
 
-<div id="page-wrap">
+<body>
+    <div id="container">
+        <div id="header">
+            <h1> Byfrosker har mer draget </h1>
+            <h6> Den eneste nettsiden du trenger for å lære om frosker</h6>
+        </div>
+        <hr>
+        <div id="topnav">
+            <a href="../index.html">Home</a>
+            <a href="./html/quiz.html">Quiz</a>
+            <a href="../html/tvangsekteskap.html">Tvangsekteskap</a>
+            <a href="../html/tvangsekteskap.html">Frosk</a>
+            <a href="../html/faq.html">FAQ</a>
 
-    <h1>Sjekk om du noen gang vil inngå tvangsekteskap</h1>
+        </div>
+        <div id="page-wrap">
 
-    <div id="sjekk">Alder:<input type="text" id="alder">
-        <button type="button" id="lagreAlder">Lagre</button> </div>
+            <h1>Sjekk om du noen gang vil inngå tvangsekteskap</h1>
 
-    <div id="spm">
-        <audio id="audio" src="../media/fortnite.mp3"></audio>
-        <form id="quiz">
+            <div id="sjekk">Alder:<input type="text" id="alder">
+                <button type="button" id="lagreAlder">Lagre</button> </div>
 
-            <ol>
+            <div id="spm">
+                <audio id="audio" src="../media/fortnite.mp3"></audio>
+                <form id="quiz">
 
-                <li>
+                    <ol>
 
-                    <h3>Velg kjønn</h3>
+                        <li>
 
-                    <div>
-                        <input type="radio" name="question-1-answers" id="question-1-answers-A" value="1" />
-                        <label for="question-1-answers-A">Mann</label>
-                    </div>
+                            <h3>Velg kjønn</h3>
 
-                    <div>
-                        <input type="radio" name="question-1-answers" id="question-1-answers-B" value="0" />
-                        <label for="question-1-answers-B">Kvinne</label>
-                    </div>
+                            <div>
+                                <input type="radio" name="question-1-answers" id="question-1-answers-A" value="1" />
+                                <label for="question-1-answers-A">Mann</label>
+                            </div>
+
+                            <div>
+                                <input type="radio" name="question-1-answers" id="question-1-answers-B" value="0" />
+                                <label for="question-1-answers-B">Kvinne</label>
+                            </div>
 
 
 
-                </li>
-        
-                <div id="spm2">
-                    <li>
+                        </li>
 
-                        <h3>Er du vegiterianer?</h3>
+                        <div id="spm2">
+                            <li>
 
-                        <div>
-                            <input type="radio" name="question-2-answers" id="question-2-answers-A" value="A" />
-                            <label for="question-2-answers-A">Ja</label>
+                                <h3>Er du vegiterianer?</h3>
+
+                                <div>
+                                    <input type="radio" name="question-2-answers" id="question-2-answers-A" value="A" />
+                                    <label for="question-2-answers-A">Ja</label>
+                                </div>
+
+                                <div>
+                                    <input type="radio" name="question-2-answers" id="question-2-answers-B" value="B" />
+                                    <label for="question-2-answers-B">Nei</label>
+                                </div>
+
+                            </li>
+
                         </div>
 
-                        <div>
-                            <input type="radio" name="question-2-answers" id="question-2-answers-B" value="B" />
-                            <label for="question-2-answers-B">Nei</label>
+                        <div id="resten">
+
+                            <li>
+
+                                <h3>Hva er dine plystreferdigheter?</h3>
+
+                                <div>
+                                    <input type="radio" name="question-3-answers" id="question-3-answers-A" value="1" />
+                                    <label for="question-3-answers-A">Helt greie</label>
+                                </div>
+
+                                <div>
+                                    <input type="radio" name="question-3-answers" id="question-3-answers-B" value="0" />
+                                    <label for="question-3-answers-B">Har ikke plystret før</label>
+                                </div>
+
+                                <div>
+                                    <input type="radio" name="question-3-answers" id="question-3-answers-C" value="0" />
+                                    <label for="question-3-answers-C"> Jeg bor på landet.</label>
+                                </div>
+
+                            </li>
+
+                            <li>
+
+                                <h3>Hvilke av disse sangene kan du plystre?</h3>
+
+                                <div>
+                                    <input type="radio" name="question-4-answers" id="question-4-answers-A" value="1" />
+                                    <label for="question-4-answers-A">Ja</label>
+                                </div>
+
+                                <div>
+                                    <input type="radio" name="question-4-answers" id="question-4-answers-B" value="0" />
+                                    <label for="question-4-answers-B">Nei</label>
+                                </div>
+
+                            </li>
+
+                            <li>
+
+                                <h3>Er du født i feil kropp?</h3>
+
+                                <div>
+                                    <input type="radio" name="question-5-answers" id="question-5-answers-A" value="0" />
+                                    <label for="question-5-answers-A">Ja</label>
+                                </div>
+
+                                <div>
+                                    <input type="radio" name="question-5-answers" id="question-5-answers-B" value="1" />
+                                    <label for="question-5-answers-B">Nei</label>
+                                </div>
+
+                            </li>
+
+                            <br>
+
+                            <input type="button" value="Se svaret ditt!" id="sesvar">
                         </div>
 
-                    </li>
-
-                </div>
-
-                <div id="resten">
-
-                    <li>
-
-                        <h3>Hva er dine plystreferdigheter?</h3>
-
-                        <div>
-                            <input type="radio" name="question-3-answers" id="question-3-answers-A" value="1" />
-                            <label for="question-3-answers-A">Helt greie</label>
-                        </div>
-
-                        <div>
-                            <input type="radio" name="question-3-answers" id="question-3-answers-B" value="0" />
-                            <label for="question-3-answers-B">Har ikke plystret før</label>
-                        </div>
-
-                        <div>
-                            <input type="radio" name="question-3-answers" id="question-3-answers-C" value="0" />
-                            <label for="question-3-answers-C"> Jeg bor på landet.</label>
-                        </div>
-
-                    </li>
-
-                    <li>
-
-                        <h3>Hvilke av disse sangene kan du plystre?</h3>
-
-                        <div>
-                            <input type="radio" name="question-4-answers" id="question-4-answers-A" value="1" />
-                            <label for="question-4-answers-A">Ja</label>
-                        </div>
-
-                        <div>
-                            <input type="radio" name="question-4-answers" id="question-4-answers-B" value="0" />
-                            <label for="question-4-answers-B">Nei</label>
-                        </div>
-
-                    </li>
-
-                    <li>
-
-                        <h3>Er du født i feil kropp?</h3>
-
-                        <div>
-                            <input type="radio" name="question-5-answers" id="question-5-answers-A" value="0" />
-                            <label for="question-5-answers-A">Ja</label>
-                        </div>
-
-                        <div>
-                            <input type="radio" name="question-5-answers" id="question-5-answers-B" value="1" />
-                            <label for="question-5-answers-B">Nei</label>
-                        </div>
-
-                    </li>
-
-                    <br>
-
-                    <input type="button" value="Se svaret ditt!" id="sesvar">
-                </div>
 
 
 
 
-
-            </ol>
-
+                    </ol>
 
 
-        </form>
+
+                </form>
+            </div>
+        </div>
+
+
+
+        <div id="melding"></div>
     </div>
-</div>
-<div id="melding"></div>
+  
 
 
-<script>
-    setup();
-</script>
+    <script>
+        setup();
+    </script>
 </body>
 
 </html>
