--- a/frosk/index.html
+++ b/frosk/index.html
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/index.css">
-
-    <title>Byfrosker har mer draget</title>
+    <link rel="stylesheet" type="text/css" href="css/styleHome.css" />
+    <title> BYFROSKER </title>
 </head>
 
 <body>
-    <h1>Byfrosker har per draget</h1>
+    <div id="container">
+        <div id="header">
+            <h1> Byfrosker har mer draget </h1>
+            <h6> Den eneste nettsiden du trenger for å lære om frosker</h6>
+        </div>
+        <hr>
+        <div id="topnav">
+            <a href="index.html">Home</a>
+            <a href="html/quiz.html">Quiz</a>
+            <a href="html/tvangsekteskap.html">Tvangsekteskap</a>
+            <a href="html/tvangsekteskap.html">Frosk</a>
+            <a href="html/faq.html">FAQ</a>
 
-    <li> <a href="html/quiz.html">Quiz</a></div>
+        </div>
+
+        <div id="main">
+
+
+
+
+
+
+            <h2>Velkommen</h2><br/>
+
+            <p>"Hva faen gjør du her?""
+            </p>
+            <p>"Go away or i will shoot you off the head"</p>
+
+            <p>"Du er ikke velkommen her"</p>
+
+
+        </div>
+    </div>
+
 </body>
 
 </html>
