--- a/frosk/html/faq.html
+++ b/frosk/html/faq.html
@@ -19,7 +19,7 @@
       <a href="../index.html">Home</a>
       <a href="../html/quiz.html">Quiz</a> 
       <a href="../html/tvangsekteskap.html">Tvangsekteskap</a>
-      <a href="../html/tvangsekteskap.html">Frosk</a>
+      <a href="../html/froskinfo.html">Frosk</a>
       <a href="../html/faq.html">FAQ</a>
 
     </div>
