--- a/frosk/html/tvangsekteskap.html
+++ b/frosk/html/tvangsekteskap.html
@@ -20,7 +20,7 @@
             <a href="../index.html">Home</a>
             <a href="../html/quiz.html">Quiz</a>
             <a href="../html/tvangsekteskap.html">Tvangsekteskap</a>
-            <a href="../html/tvangsekteskap.html">Frosk</a>
+            <a href="../html/froskinfo.html">Frosk</a>
             <a href="../html/faq.html">FAQ</a>
 
         </div>
@@ -70,7 +70,7 @@
                     <p>
                         Om du ikke allerede har sjekket ut vår artikkel om frosker, så anbefaler jeg at du gjør det nå. Da vil du få en enda bedre
                         forståelse for dette serdeles viktige, glemte emnet. Du finner artikkelen her: <a
-                            href="froskinfo.html">Froskinfo</a>.
+                            href="../html/froskinfo.html">Froskinfo</a>.
             </div>
         </div>
     </div>
