--- a/vg3/balls/balls.html
+++ b/vg3/balls/balls.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,23 @@
     <script src="balls.js"></script>
     <title>Balls</title>
 </head>
+
 <body>
 
     <div id="main">
         <div id="board">
             <button id="start">Spre kommunisme, spre glede</button>
+            <div id="bil">
+                <div id="stripe"></div>
+
+                <div id="vindu"></div>
+
+            </div>
         </div>
     </div>
     <script>
         setup();
     </script>
 </body>
+
 </html>
