--- a/vg3/land-skjema/index.html
+++ b/vg3/land-skjema/index.html
@@ -21,6 +21,13 @@
             <label for="lagre"> <button id="lagre" type="button">Lagre</button></label>
         </form>
     </div>
+    <div id="oversikt">
+        <select name="land1" id="land1"></select>
+        <select name="land2" id="land2"></select>
+        <select name="land3" id="land3"></select>
+        <select name="land4" id="land4"></select>
+        <button id="tegn">Vis grafisk</button>
+    </div>
 
     <canvas></canvas>
 
