--- a/muntlig/index.html
+++ b/muntlig/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Læreplanmål:</h1>
-    <h2>Planlegging od dokumentasjon</h2>
+    <h2>Planlegging og dokumentasjon</h2>
 
     <p>Mål for opplæringen er at eleven skal kunne</p>
     <ul>
@@ -32,8 +32,9 @@
     <p><ul>
         <li>lese og bruke dokumentasjon og kode
             </li>
+            <button><a href="dokumentasjon.html">Les</a></button>
         <li>definere variabler og velge hensiktsmessige datatyper 
-            </li>
+            </li><button><a href="variabler.html">Les</a></button>
         <li>programmere med enkle og indekserte variabler eller andre kolleksjoner av variabler
             </li>
         <li>programmere med valg og gjentakelser
