--- a/vg3/varer/varer.html
+++ b/vg3/varer/varer.html
@@ -23,18 +23,21 @@
                 </select>
             </label>
 
-            <label id="elektrodiv" class="elektroting" class="varer" for="elektro"> 
-                <div id="radio"> radio <input class="vare" type="radio" name="vare" value="Radio" ></div>
-                <div id="tv">tv <input class="vare" type="radio" name="vare" value="TV" ></div>
-                <div id="pc">pc <input class="vare" type="radio" name="vare" value="PC" ></div>
+            <label id="elektrodiv" class="elektrovare" class="varer" for="elektro"> 
+                <div id="radio"> Radio <input class="vare" type="checkbox" name="vare" value="Radio" ></div>
+                <div id="tv">Tv <input class="vare" type="checkbox" name="vare" value="TV" ></div>
+                <div id="pc">Pc <input class="vare" type="checkbox" name="vare" value="PC" ></div>
             </label>
 
-            <label id="klerdiv" class="klerting" class="varer" for="kler"> 
-                <div id="hatt">hatt <input class="vare" type="radio" name="vare" value="Hatt" ></div>
-                <div id="sko">sko <input class="vare" type="radio" name="vare" value="Sko" ></div>
-                <div id="slips">slips <input class="vare" type="radio" name="vare" value="Slips" ></div></label>
+            <label id="klerdiv" class="klervare" class="varer" for="kler"> 
+                <div id="hatt">Hatt <input class="vare" type="checkbox" name="vare" value="Hatt" ></div>
+                <div id="sko">Sko <input class="vare" type="checkbox" name="vare" value="Sko" ></div>
+                <div id="slips">Slips <input class="vare" type="checkbox" name="vare" value="Slips" ></div>
+            </label>
 
-            <label id="brusdiv" class="brusting" class="varer" for="brus"> <div id="cola">cola <input class="vare" type="radio" name="vare" value="Cola" ></div>
+            <label id="brusdiv" class="brusvare" class="varer" for="brus"> 
+                <div id="cola">Cola <input class="vare" type="checkbox" name="vare" value="Cola" ></div>
+                <div id="cola">Cola <input class="vare" type="checkbox" name="vare" value="Cola" ></div>
             </label>
 
 
